2011-08-11  Vadim Kurland  <vadim@netcitadel.com>

	* InterfaceEditorWidget.cpp (validateAddress): fixes #2641
	"newFirewall dialog does not accept ipv6 addresses with long
	prefixes". The dialog did not allow ipv6 addresses of inetrfaces
	with netmask > 64 bit.

	* newFirewallDialog.cpp (cleanup): fixes #2642 "GUI crashes if
	user cancels newFirewall dialog".

	* RuleOptionsDialog.cpp (fillInterfaces): the drop-down list of
	interfaces for the "route-through" rule option for PF and iptables
	should include not only cluster interfaces, but also interfaces of
	all members. This way, we can make compiler generate configuration
	"pass in quick on em0 route-to { ( em0 10.1.1.2 ) } ... " for a
	rule of a PF cluster. Here "em0" is an interface of a member, not
	the cluster.

2011-08-08  Vadim Kurland  <vadim@netcitadel.com>

	* configlets/freebsd/rc_conf_carp_interface: see #2636 "carp :
	Incorrect output in rc.conf.local format". Should use
	create_args_carp0 instead of ifconfig_carp0 to set up CARP
	interface vhid, pass and adskew parameters.

2011-08-05  Vadim Kurland  <vadim@netcitadel.com>

	* RuleElement.cpp (RuleElementItf::validateChild): see #2635
	Object type AttachedNetworks is not allowed in the "interface"
	rule element.

2011-08-03  Vadim Kurland  <vadim@netcitadel.com>

	* newFirewallDialog_from_template.cpp (replaceReferencesToObject):
	see #2628 fixed crash that happened if user create new firewall
	object from a template and changed one of the ip addresses, while
	another firewall object created from the same template already
	existed in the tree.

2011-08-02  Vadim Kurland  <vadim@netcitadel.com>

	* instDialog_ui_ops.cpp (instDialog::getInstOptions): moved "batch
	install" button from the main installer wizard to the dialog where
	user enters their password. Now user can start in a non-batch
	install mode but continue in batch install mode at any time if all
	their firewalls authenticate with the same user name and password.
