@@ -2,9 +2,9 @@
 #
 #  This is automatically generated file. DO NOT MODIFY !
 #
-#  Firewall Builder  fwb_ipt v5.0.0.3557
+#  Firewall Builder  fwb_ipt v5.0.1.3574
 #
-#  Generated Wed Jul  6 17:48:03 2011 PDT by vadim
+#  Generated Thu Aug 11 16:28:50 2011 PDT by vadim
 #
 # files: * rc.firewall.local /etc/rc.d//rc.firewall.local
 #
